syntax = "proto3";
package webgpu;

// Base job metadata
message Meta {
  string user_id = 1;
  int64 timestamp = 2;
  string client_info = 3;
  map<string, string> custom_fields = 4;
}

// Job status enumeration
enum JobStatus {
  PENDING = 0;
  RUNNING = 1;
  COMPLETED = 2;
  FAILED = 3;
  CANCELLED = 4;
  PAUSED = 5;
}

// Basic job structure
message Job {
  string job_id = 1;
  string job_type = 2;
  bytes payload = 3;
  JobStatus status = 4;
  string enqueue_at = 5;
  string started_at = 6;
  string finished_at = 7;
  string worker_id = 8;
  string error = 9;
  Meta meta = 10;
}

// Basic result structure
message Result {
  string job_id = 1;
  Meta meta = 2;
  bytes result_data = 3;
  string s3_key = 4;
  string produced_at = 5;
  map<string, string> extras = 6;
}

// Worker heartbeat
message WorkerHeartbeat {
  string worker_id = 1;
  string worker_type = 2;
  int32 active_jobs = 3;
  int32 completed_jobs = 4;
  int64 memory_usage = 5;
  float cpu_usage = 6;
  int64 timestamp = 7;
}